--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
-    "cms-javascript-sdk": "0.0.2",
+    "cms-javascript-sdk": "git+https://github.com/amplience/cms-javascript-sdk.git#0.0.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
-    "hbs": "^4.0.1",
+    "handlebars-helpers": "^0.10.0",
     "npm": "^5.6.0"
   }
 }
